--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -901,6 +901,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .text-center {
   text-align: center;
 }
